force-app/main/default/objects/Trade_Event_Attendee__c/Trade_Event_Attendee__c.object-meta.xml
<CustomObject>
    <description>Junction Object</description>
    <label>Trade Event Attendee</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Trade Event Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>