force-app/main/default/objects/Trade_Event_Attendee__c/fields/Apartment_Access__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Guest has access to the Apartment</description>
    <inlineHelpText>Guest has access to the Apartment</inlineHelpText>
    <label>Apartment Access</label>
    <type>Checkbox</type>
</CustomField>