force-app/main/default/objects/Trade_Event_Attendee__c/fields/Attendee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Notes__c</fullName>
    <label>Attendee Notes</label>
    <length>36000</length>
    <type>LongTextArea</type>
</CustomField>