force-app/main/default/objects/Trade_Event_Attendee__c/fields/Car_Registration__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration__c</fullName>
    <label>Car Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>