force-app/main/default/objects/Trade_Event_Attendee__c/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <description>Dietary requirements or food allergies</description>
    <inlineHelpText>Dietary requirements or food allergies</inlineHelpText>
    <label>Dietary Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>