force-app/main/default/objects/Trade_Event_Attendee__c/fields/Elite_Car_Required__c.field-meta.xml
<CustomField>
    <fullName>Elite_Car_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elite Car Required</label>
    <type>Checkbox</type>
</CustomField>