force-app/main/default/objects/Trade_Event_Attendee__c/fields/Followed_Up__c.field-meta.xml
<CustomField>
    <fullName>Followed_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followed Up</label>
    <type>Checkbox</type>
</CustomField>