force-app/main/default/objects/Trade_Event_Attendee__c/fields/Get_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Get_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Get Opt-In information from the guest</description>
    <inlineHelpText>Get Opt-In information from the guest</inlineHelpText>
    <label>Get Opt-In</label>
    <type>Checkbox</type>
</CustomField>