force-app/main/default/objects/Trade_Event_Attendee__c/fields/HFS_Number__c.field-meta.xml
<CustomField>
    <fullName>HFS_Number__c</fullName>
    <description>Hands Free Shopping number for the day</description>
    <inlineHelpText>Hands Free Shopping number for the day</inlineHelpText>
    <label>HFS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>