force-app/main/default/objects/Trade_Event_Attendee__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>Person inviting HNW Guest, may not be salesforce user</description>
    <inlineHelpText>Person inviting HNW Guest, may not be salesforce user</inlineHelpText>
    <label>Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>