force-app/main/default/objects/Trade_Event_Attendee__c/fields/Invite_Status__c.field-meta.xml
<CustomField>
    <fullName>Invite_Status__c</fullName>
    <defaultValue>&quot;Invited&quot;</defaultValue>
    <label>Invite Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>