force-app/main/default/objects/Trade_Event_Attendee__c/fields/Joining_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Joining_Instructions_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>have the joining instructions been sent?</description>
    <inlineHelpText>have the joining instructions been sent?</inlineHelpText>
    <label>Joining Instructions Sent</label>
    <type>Checkbox</type>
</CustomField>