force-app/main/default/objects/Trade_Event_Attendee__c/fields/Names_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Guests__c</fullName>
    <description>Names of people coming with the invited guest</description>
    <inlineHelpText>Names of people coming with the invited guest</inlineHelpText>
    <label>Names of Guests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>