force-app/main/default/objects/Trade_Event_Attendee__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>Number of people coming with invited guest</description>
    <inlineHelpText>Number of people coming with invited guest</inlineHelpText>
    <label>Number of Guests</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>