force-app/main/default/objects/Trade_Event_Attendee__c/fields/Tracked_Spend__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Spend__c</fullName>
    <description>Total spend of the visit for an Event Attendee</description>
    <inlineHelpText>Total spend associated with the Visit for this Attendee</inlineHelpText>
    <label>Tracked Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>