force-app/main/default/objects/Trade_Event_Attendee__c/fields/Trade_Event__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event__c</fullName>
    <label>Trade Event</label>
    <referenceTo>Trade_Event__c</referenceTo>
    <relationshipLabel>Trade Event Attendees</relationshipLabel>
    <relationshipName>Trade_Event_Attendees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>