force-app/main/default/objects/Trade_Event_Attendee__c/fields/Trade_Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event_Attendee__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName  ,&quot;_self&quot;)</formula>
    <label>Trade Event Attendee</label>
    <type>Text</type>
</CustomField>