force-app/main/default/objects/Trade_Event_Attendee__c/fields/Trade_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event_Date__c</fullName>
    <formula>Trade_Event__r.Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Event Date</label>
    <type>Date</type>
</CustomField>