force-app/main/default/objects/Trade_Event_Attendee__c/fields/Trade_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event_Name__c</fullName>
    <formula>Trade_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Event Name</label>
    <type>Text</type>
</CustomField>