force-app/main/default/objects/Trade_Event_Attendee__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Train</label>
    <type>Checkbox</type>
</CustomField>