force-app/main/default/objects/Trade_Event_Attendee__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenation of contact Id and trade event Id to ensure duplicate records are not created.</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>