force-app/main/default/objects/Trade_Event_Attendee__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visit__c.Account__r.PersonContactId</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Trade Event Attendees</relationshipLabel>
    <relationshipName>Trade_Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>