force-app/main/default/objects/Trade_Event_Attendee__c/recordTypes/HNW_Event_Attendee.recordType-meta.xml
<RecordType>
    <fullName>HNW_Event_Attendee</fullName>
    <active>true</active>
    <description>A High Net Worth Guest attending an event</description>
    <label>HNW Event Attendee</label>
</RecordType>