force-app/main/default/objects/Trade_Event_Attendee__c/recordTypes/Leasing_Contact.recordType-meta.xml
<RecordType>
    <fullName>Leasing_Contact</fullName>
    <active>true</active>
    <label>Leasing Contact</label>
</RecordType>