force-app/main/default/objects/Trade_Event_Attendee__c/recordTypes/Tourism_Contact.recordType-meta.xml
<RecordType>
    <fullName>Tourism_Contact</fullName>
    <active>true</active>
    <label>Tourism Contact</label>
</RecordType>